css/styles.css
html,
body {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Lato", sans-serif;
  font-size: 16px;
  color: #333;
  background-color: #F5F0F6;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Lato", sans-serif;
  font-weight: 700;
  color: #ff299c;
  margin: 0 0 20px 0;
}

.navbar-nav .nav-item .active {
  text-decoration: underline;
  font-weight: bold;
}

.container {
  margin: 40px auto;
}

#carouselWhatsOn h4 {
  color: #ffffff;
  font-weight: bold;
}

.btn-primary {
  border: 1px solid #ff299c;
  background-color: rgb(255, 41, 156);
}

.btn-primary:hover {
  background-color: #5458b5;
}

.hero {
    background: url('../images/popcorn.jpg') 0 0;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    padding-top: 100px;;
    opacity: 75%;
    min-height: 300px;
    height: 80vh;
    overflow: hidden;
}


.form-wrapper {
    margin-top: -200px !important;
    position: relative;
    padding: 20px;
    z-index: 1;
    background-color: #ffffff;
}

footer {
  background-color: #222222;
}

footer a {
  color: #ff299c;
  text-decoration: none;
}

footer a:hover {
  color: #f989bb;
}

footer > p,
footer > div > p,
.list-inline-item {
  color: #ff299c;
}

footer > img:hover {
  transform: scale(1.2);
}

@media (min-width: 768px) {
    .form-wrapper .form-img {
        position: sticky;
    }
}

